<resources>
    <string name="app_name">GeoCalculator</string>
    <string name="action_settings">Settings</string>
    <string name="p1LatHint">Enter latitude for p1</string>
    <string name="p1LongHint">Enter longitude for p1</string>
    <string name="p2LatHint">Enter latitude for p2</string>
    <string name="p2LongHint">Enter longitude for p2</string>
    <string name="calculate">Calculate</string>
    <string name="clear">Clear</string>
    <string name="distance">Distance:</string>
    <string name="bearing">Bearing:</string>
    <string name="longRequired">Longitude required</string>
    <string name="latRequired">Latitude required</string>
    <string name="calculated">Distance and Bearing calculated</string>
    <string name="kilometers">kilometers</string>
    <string name="miles">miles</string>
    <string name="mils">mils</string>
    <string name="degrees">degrees</string>
    <string name="title_activity_calc_settings">MySettingsActivity</string>
    <string-array name="distanceUnits">
        <item>Kilometers</item>
        <item>Miles</item>
    </string-array>
    <string-array name="bearingUnits">
        <item>Degrees</item>
        <item>Mils</item>
    </string-array>
    <string name="title_activity_history">HistoryActivity</string>
    <string name="title_activity_location_search">Location Search</string>
</resources>
