<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GeoCalc_main">
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"

    <EditText
        android:id="@+id/p2LongTxt"
        android:layout_width="188dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/p1LongTxt"
        android:ems="10"
        android:hint="@string/p2LongHint"
        android:inputType="number"
        tools:layout_editor_absoluteX="186dp"
        tools:layout_editor_absoluteY="74dp" />

    <EditText
        android:id="@+id/p1LongTxt"
        android:layout_width="188dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:hint="@string/p1LongHint"
        android:inputType="number"
        tools:layout_editor_absoluteX="186dp"
        tools:layout_editor_absoluteY="16dp" />

    <EditText
        android:id="@+id/p2LatTxt"
        android:layout_width="172dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/p2LongTxt"
        android:ems="10"
        android:hint="@string/p2LatHint"
        android:inputType="number"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="74dp" />

    <EditText
        android:id="@+id/p1LatTxt"
        android:layout_width="172dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:hint="@string/p1LatHint"
        android:inputType="number"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp" />

    <Button
        android:id="@+id/calcBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/p2LongTxt"
        android:text="@string/calculate" />

    <Button
        android:id="@+id/clrBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/p2LongTxt"
        android:layout_toEndOf="@+id/calcBtn"
        android:text="@string/clear" />

    <TextView
        android:id="@+id/distLbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/calcBtn"
        android:text="@string/distance" />

    <TextView
        android:id="@+id/bearLbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/distLbl"
        android:text="@string/bearing" />

</RelativeLayout>